--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -178,10 +178,10 @@ onclick="location.href = '/list/{{list.id}}'"
       <h4 class="col-lg-9" style="color: blue; "> Flagged Rankings </h4>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <h4 class="col-lg-3" style="color: red;"> {{ reversedRankings }}</h4>
       <h4 class="col-lg-9" style="color: blue; "> Reversed Rankings </h4>
-    </div>
+    </div> -->
 
   
     <div class="row" style="padding-top: 1%;">
