--- a/app/templates/all-movies-with-posters.html
+++ b/app/templates/all-movies-with-posters.html
@@ -143,7 +143,7 @@
            </td>
           <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
           <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
-          <td>{{ movie.runtime }}</td>
+          <td>{{ movie.RuntimeString }}</td>
           <td>{{ movie.Genre }}</td>
           <td>{{ movie.rankingWinCount }} / {{movie.rewatchCount}} ({{ movie.rankingPercentage }}%)</td>
           <td>{{ movie.rewatchScore }}</td>
@@ -195,7 +195,7 @@
            {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
         <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
         <td><a href='/all-movies/{{movie.DirectorString}}'> {{ movie.DirectorString }} </a></td>
-        <td>{{ movie.runtime }}</td>
+        <td>{{ movie.RuntimeString }}</td>
         <td>{{ movie.notes }}</td>
         <td>{{ movie.Genre }}</td>
         <!-- <td><a href='/update-movie/{{movie.id}}'>Update </a></td> -->
