--- a/app/templates/rank.html
+++ b/app/templates/rank.html
@@ -8,6 +8,62 @@
 {% block content %}
 
 <style>
+
+
+
+.vs-indicator {
+    text-align: center;
+    font-size: 20px; /* Adjusted for smaller screens below */
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  .vs-indicator div {
+    background: #fff;
+    padding: 10px 20px;
+    border-radius: 20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  }
+
+  .vs-arrow {
+    display: inline-block;
+    margin: 0 20px;
+    font-size: 24px; /* Adjusted for smaller screens below */
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .vs-indicator {
+      font-size: 16px;
+    }
+
+    .vs-arrow {
+      margin: 0 10px;
+      font-size: 20px;
+    }
+
+    .vs-indicator div {
+      padding: 5px 10px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .vs-indicator {
+      font-size: 14px;
+    }
+
+    .vs-arrow {
+      font-size: 18px;
+    }
+
+    .vs-indicator div {
+      padding: 2px 5px;
+    }
+  }
+
   .poster-wrapper {
     position: relative;
     display: inline-block;
@@ -57,22 +113,29 @@
 
 <div class="container-fluid">
   <div class="row" id="captureThisDiv">
-    <div style="background-color: #f0f0f0;" class="col-lg-4">
+    <div style="background-color: #f0f0f0; text-align: center;" class="col-4">
       <div style="color: grey; font-size: 20px;"><a
-          href='http://www.google.com/search?q={{firstMovie.title}} ({{firstMovie.year}})' title="{{firstMovie.Plot}}" target="_blank">{{
+          href='http://www.google.com/search?q={{firstMovie.title}} ({{firstMovie.year}})' title="{{firstMovie.Plot}}"
+          target="_blank">{{
           firstMovie.title }} ({{ firstMovie.year }})</a></div>
       <div class="poster-wrapper" style="margin-top: 10px;"><a href="{{firstMovieLink}}"><img
-            src="{{ firstMovie.id|get_poster(firstMovie.title, firstMovie.year, firstMovie.poster) }}" alt="Movie Poster" style="width: 100%;">
+            src="{{ firstMovie.id|get_poster(firstMovie.title, firstMovie.year, firstMovie.poster) }}"
+            alt="Movie Poster" style="width: 100%;">
           <div class="hover-text">Rather Watch</div>
         </a></div>
-      <div style="margin-top: 5px;">Directed By: <a href='/all-movies/{{firstMovie.DirectorString}}' target="_blank"> <span style="font-weight: bold;">{{ firstMovie.DirectorString }}</span></a></div>
+      <div style="margin-top: 5px;">Directed By: <a href='/all-movies/{{firstMovie.DirectorString}}' target="_blank">
+          <span style="font-weight: bold;">{{ firstMovie.DirectorString }}</span></a></div>
       <!-- <div style="margin-top: 10px;">Written By:<span style="font-weight: bold;">{{ firstMovie.Writer }}</span></div> -->
-      <div style="margin-top: 5px;">Runtime: <span style="font-weight: bold;">{{ firstMovie.RuntimeString }}</span></div>
+      <div style="margin-top: 5px;">Runtime: <span style="font-weight: bold;">{{ firstMovie.RuntimeString }}</span>
+      </div>
       <div style="margin-top: 5px;">Genres: <span style="font-weight: bold;">{{ firstMovie.Genre }}</span></div>
       <div style="margin-top: 5px;">Starring: <span style="font-weight: bold;">{{ firstMovie.Actors }}</span></div>
-      <div  style="margin-top: 5px;">Your Rating: <span style="font-weight: bold;">{{ firstMovie.stars }}/10</span> {% if firstMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif firstMovie.liked == 2 %}
-        <span>&#129309;</span>{% elif firstMovie.liked == 3 %}<span>&#128078;</span>{% endif %}</div>
-        <div  style="margin-top: 5px;">Imdb Rating: <a href="https://imdb.com/title/{{firstMovie.imdbId}}" target="_blank"><span style="font-weight: bold;">{{ firstMovie.imdbRating }}/10</span></a> </div>
+      <div style="margin-top: 5px;">Your Rating: <span style="font-weight: bold;">{{ firstMovie.stars }}/10</span> {% if
+        firstMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif firstMovie.liked == 2 %}
+        <span>&#129309;</span>{% elif firstMovie.liked == 3 %}<span>&#128078;</span>{% endif %}
+      </div>
+      <div style="margin-top: 5px;">Imdb Rating: <a href="https://imdb.com/title/{{firstMovie.imdbId}}"
+          target="_blank"><span style="font-weight: bold;">{{ firstMovie.imdbRating }}/10</span></a> </div>
       <div class="btn-wrapper">
         <input class="btn" type="button" value="More Details" onclick="window.open('/details/{{firstMovie.id}}')" />
       </div>
@@ -84,23 +147,41 @@
       </div>
       {% endif %}
     </div>
-    <div style="background-color: #f0f0f0;" class="col-lg-4">
+    <div class="col-lg-2">
+      <div class="vs-indicator">
+        <div>
+          <span class="vs-arrow">&#8592;</span>
+          <br>
+          Which Would You Rather Watch?
+          <br>
+          <span class="vs-arrow">&#8594;</span>
+        </div>
+      </div>
+    </div>
+    <div style="background-color: #f0f0f0; text-align: center;" class="col-4">
       <div style="color: grey; font-size: 20px;"><a
-          href='http://www.google.com/search?q={{secondMovie.title}} ({{secondMovie.year}})'title="{{secondMovie.Plot}}" target="_blank">{{
+          href='http://www.google.com/search?q={{secondMovie.title}} ({{secondMovie.year}})'
+          title="{{secondMovie.Plot}}" target="_blank">{{
           secondMovie.title }} ({{ secondMovie.year }})</a></div>
       <div class="poster-wrapper" style="margin-top: 10px;"><a href="{{secondMovieLink}}" alt="Movie Poster"
-          style="width: 100%;"><img src="{{ secondMovie.id|get_poster(secondMovie.title, secondMovie.year, secondMovie.poster)}}" alt="Movie Poster"
-            style="width: 100%;">
+          style="width: 100%;"><img
+            src="{{ secondMovie.id|get_poster(secondMovie.title, secondMovie.year, secondMovie.poster)}}"
+            alt="Movie Poster" style="width: 100%;">
           <div class="hover-text">Rather Watch</div>
         </a></div>
-        <div style="margin-top: 5px;">Directed By: <a href='/all-movies/{{secondMovie.DirectorString}}' target="_blank"> <span style="font-weight: bold;">{{ secondMovie.DirectorString }}</span></a></div>
-        <!-- <div style="margin-top: 10px;">Written By:<span style="font-weight: bold;">{{ secondMovie.Writer }}</span></div> -->
-        <div style="margin-top: 5px;">Runtime: <span style="font-weight: bold;">{{ secondMovie.RuntimeString }}</span></div>
-        <div style="margin-top: 5px;">Genres: <span style="font-weight: bold;">{{ secondMovie.Genre }}</span></div>
-        <div style="margin-top: 5px;">Starring: <span style="font-weight: bold;">{{ secondMovie.Actors }}</span></div>
-        <div  style="margin-top: 5px;">Your Rating: <span style="font-weight: bold;">{{ secondMovie.stars }}/10</span> {% if secondMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif secondMovie.liked == 2 %}
-          <span>&#129309;</span>{% elif secondMovie.liked == 3 %}<span>&#128078;</span>{% endif %}</div>
-          <div  style="margin-top: 5px;">Imdb Rating: <a href="https://imdb.com/title/{{secondMovie.imdbId}}" target="_blank"><span style="font-weight: bold;">{{ secondMovie.imdbRating }}/10</span></a> </div>
+      <div style="margin-top: 5px;">Directed By: <a href='/all-movies/{{secondMovie.DirectorString}}' target="_blank">
+          <span style="font-weight: bold;">{{ secondMovie.DirectorString }}</span></a></div>
+      <!-- <div style="margin-top: 10px;">Written By:<span style="font-weight: bold;">{{ secondMovie.Writer }}</span></div> -->
+      <div style="margin-top: 5px;">Runtime: <span style="font-weight: bold;">{{ secondMovie.RuntimeString }}</span>
+      </div>
+      <div style="margin-top: 5px;">Genres: <span style="font-weight: bold;">{{ secondMovie.Genre }}</span></div>
+      <div style="margin-top: 5px;">Starring: <span style="font-weight: bold;">{{ secondMovie.Actors }}</span></div>
+      <div style="margin-top: 5px;">Your Rating: <span style="font-weight: bold;">{{ secondMovie.stars }}/10</span> {%
+        if secondMovie.liked == 1 %}<span style="color: red;">&#128077;</span>{% elif secondMovie.liked == 2 %}
+        <span>&#129309;</span>{% elif secondMovie.liked == 3 %}<span>&#128078;</span>{% endif %}
+      </div>
+      <div style="margin-top: 5px;">Imdb Rating: <a href="https://imdb.com/title/{{secondMovie.imdbId}}"
+          target="_blank"><span style="font-weight: bold;">{{ secondMovie.imdbRating }}/10</span></a> </div>
       <div class="btn-wrapper">
         <input class="btn" type="button" value="More Details" onclick="window.open('/details/{{secondMovie.id}}')" />
       </div>
@@ -112,28 +193,30 @@
       </div>
       {% endif %}
     </div>
-    <div class="col-lg-4">
+    
+    <div class="col-2">
       <div class="row">
         <input class="btn" type="submit" value="{{buttonName}}" onclick="window.open('{{buttonValue}}')" />
       </div>
       Last Ranked: <span style="color: black; background-color: #FFFF00">{{flagged}} </span>
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-6">
           Winner:
         </div>
-        <div class="col-lg-6">
+        <div class="col-6">
           Loser:
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
-          <a href=/details/{{winner.id}} target="_blank"> <img src="{{ winner.id|get_poster(winner.title, winner.year, winner.poster) }}"
+        <div class="col-6">
+          <a href=/details/{{winner.id}} target="_blank"> <img
+              src="{{ winner.id|get_poster(winner.title, winner.year, winner.poster) }}"
               alt="Poster Not Available."></a>
         </div>
-        <div class="col-lg-6">
-          <a href=/details/{{loser.id}} target="_blank"> <img src="{{ loser.id|get_poster(loser.title, loser.year, loser.poster) }}"
-              alt="Poster Not Available."></a>
+        <div class="col-6">
+          <a href=/details/{{loser.id}} target="_blank"> <img
+              src="{{ loser.id|get_poster(loser.title, loser.year, loser.poster) }}" alt="Poster Not Available."></a>
         </div>
       </div>
 
@@ -142,34 +225,10 @@
       </div>
 
       <div class="row">
-        <input id="screenshotButton" class="btn" type="button" value="Skip" />
+        <input id="screenshotButton" class="btn" type="button" value="Skip"  onclick="location.href='/share/{{firstMovie.id}}/{{secondMovie.id}}'" />
       </div>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
-
-      <script>
-        function redirectToShare() {
-          window.location.href = '/share/{{firstMovie.id}}/{{secondMovie.id}}';
-        }
-        document.getElementById('screenshotButton').addEventListener('click', function () {
-          // Generate the screenshot
-          html2canvas(document.getElementById('captureThisDiv')).then(function (canvas) {
-            // Convert the canvas to a Blob
-            canvas.toBlob(function (blob) {
-              // Create a new ClipboardItem from the Blob
-              const item = new ClipboardItem({ "image/png": blob });
-
-              // Write the ClipboardItem to the clipboard
-              navigator.clipboard.write([item]).then(function () {
-                console.log('Image copied to clipboard');
-                redirectToShare();
-              }, function (error) {
-                console.error('Could not copy image to clipboard: ', error);
-              });
-            });
-          });
-        });
-      </script>
+    
     </div>
   </div>
 </div>
